<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:columnCount="2"
    tools:context="com.example.chen.final_project.Patient_Intake_form">



    <TextView
        android:id="@+id/intakeForm_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intakeForm_Title"
        android:textAlignment="center"
        android:layout_gravity="left"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_row="0"
        android:layout_columnSpan="2"/>

    <ImageView
        android:id="@+id/intakeForm_doctorChoice"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:src="@drawable/icon_doctor" />

    <Button
        android:id="@+id/buttonRegisterDoctor"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_marginBottom="20dp"
        android:text="@string/intakeForm_RegisterForDoctor" />

    <ImageView
        android:id="@+id/intakeForm_dentistChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_dentist"
        android:layout_column="0"
        android:layout_row="2"/>

    <Button
        android:id="@+id/buttonRegisterDentist"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_marginBottom="20dp"
        android:text="@string/intakeForm_RegisterForDentist" />

    <ImageView
        android:id="@+id/intakeForm_optometristChoice"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_column="0"
        android:layout_row="3"
        android:src="@drawable/icon_optometrist" />

    <Button
        android:id="@+id/buttonRegisterOptometrist"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_marginBottom="20dp"
        android:text="@string/intakeForm_RegisterForOptometrist" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intakeForm_GeneralDescription"
        android:textSize="16dp"
        android:layout_marginTop="15dp"
        android:layout_columnSpan="2"/>




</GridLayout>
